# FleeceKM-stats

./: .gitignore  README.md  combined_stats.ipynb  pyproject.toml
ASKMe/: balancing.ipynb  hitl.ipynb  stats.ipynb  top_ngrams_10k.csv  top_ngrams_full.csv
GoogleNQ/: download_dataset.sh  sample.jsonl  simplify_nq_data.py  stats.ipynb  text_utils.py  top_ngrams.csv
HotpotQA/: download_dataset.sh  sample.json  stats.ipynb  top_ngrams.csv
TriviaQA/: download_dataset.sh  sample.json  stats.ipynb  top_ngrams.csv
lib/: ngrams.py
