[tool.poetry]
name = "fleecekmbackend"
version = "0.1.0"
description = ""
authors = ["nociza <azicon@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
tqdm = "^4.66.2"
ipykernel = "^6.29.4"
statsmodels = "^0.14.2"
ipywidgets = "^8.1.2"
widgetsnbextension = "^4.0.10"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
nltk = "^3.8.1"
spacy = "^3.7.4"
pip = "^24.0"
scikit-learn = "^1.5.0"
absl-py = "^2.1.0"
lxml = "^5.2.2"
html5lib = "^1.1"
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
